--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body{
+    background-color: rgba(0, 0, 0, .9);
+}
+
 nav{
-    border-bottom: 1px solid black;
+    border-bottom: 0.5px solid white;
+    color: white;
     width: 100%;
     display: flex;
     justify-content: center;       
@@ -11,7 +16,7 @@ nav{
 }
 
 .Materias{
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 25px;
 }
@@ -27,11 +32,20 @@ nav{
 }
 
 .fechasLabo{
+    color: white;
     display: none;
 }
 
-.codigo{
+.codigo22{   
+    background-color: white; 
     display: none;
-    width: 90%;
+    width: 100%;
     height: 350px;
+}
+
+.codigo29{
+    background-color: white; 
+    display: none;
+    width: 100%;
+    height: 350px;  
 }
