--- a/style.css
+++ b/style.css
@@ -36,16 +36,17 @@ nav{
     display: none;
 }
 
-.codigo22{   
+.codigo{
+    margin-left: 30px;
     background-color: white; 
     display: none;
-    width: 100%;
+    width: 90%;
     height: 350px;
 }
 
-.codigo29{
-    background-color: white; 
-    display: none;
-    width: 100%;
-    height: 350px;  
+.descripciones{
+    color: white; 
+    size: 5px; 
+    display: none; 
+    margin-left: 20px;
 }
